--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@material-table/core": "^0.2.20",
+    "@material-table/core": "^0.2.23",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.2.7",
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
